<?xml version="1.0"?>
<package>
  <name>argos_bridge</name>
  <version>0.0.0</version>
  <description>The argos_bridge package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="av@mun.ca">Andrew Vardy</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/argos_bridge</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>rosgraph_msgs</build_depend>
  <run_depend>rosgraph_msgs</run_depend>

  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>

  <build_depend>tf2_msgs</build_depend>
  <run_depend>tf2_msgs</run_depend>

  <build_depend>simulator_nimbro</build_depend>
  <run_depend>simulator_nimbro</run_depend>

  <build_depend>argos_ground_truth_plugin</build_depend>
  <run_depend>argos_ground_truth_plugin</run_depend>

  <build_depend>argos_lidar_plugin</build_depend>
  <run_depend>argos_lidar_plugin</run_depend>

  <build_depend>argos_turtlebot3_wafflepi_plugin</build_depend>
  <run_depend>argos_turtlebot3_wafflepi_plugin</run_depend>

  <export>
  </export>
</package>
