<?xml version="1.0"?>
<package format="2">
  <name>simulated_robot</name>
  <version>0.0.0</version>
  <description>The simulated_robot package</description>

  <maintainer email="xiou@microsoft.com">root</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/simulated_robot</url> -->

  <author email="xiou@microsoft.com">Xinyi Joffre</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>fake_localization</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>tf2</exec_depend>
</package>
